// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuModal /> can be logged out 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuModal
    history={
        Object {
            "push": [Function],
          }
    }
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": true,
      "backdrop": true,
      "backdropTransition": Object {
        "mountOnEnter": true,
        "timeout": 150,
      },
      "centered": false,
      "children": Array [
        <ModalHeader
          closeAriaLabel="Close"
          tag="h5"
          toggle={[Function]}
          wrapTag="div"
>
          <button
                    className="close"
                    onClick={[Function]}
                    type="button"
          >
                    <span
                              aria-hidden="true"
                    >
                              ×
                    </span>
          </button>
          <h2
                    className="logo-medium text-flav pt-3"
          >
                    BAM!
          </h2>
</ModalHeader>,
        <ModalBody
          tag="div"
>
          <button
                    className="btn btn-logout"
                    onClick={[Function]}
          >
                    Logout
          </button>
</ModalBody>,
      ],
      "className": "menu-modal",
      "fade": false,
      "isOpen": false,
      "keyboard": true,
      "modalTransition": Object {
        "timeout": 300,
      },
      "onClosed": [Function],
      "onOpened": [Function],
      "role": "dialog",
      "toggle": [Function],
      "zIndex": 1050,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <button
              className="close"
              onClick={[Function]}
              type="button"
>
              <span
                            aria-hidden="true"
              >
                            ×
              </span>
</button>,
            <h2
              className="logo-medium text-flav pt-3"
>
              BAM!
</h2>,
          ],
          "closeAriaLabel": "Close",
          "tag": "h5",
          "toggle": [Function],
          "wrapTag": "div",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span
                aria-hidden="true"
>
                ×
</span>,
              "className": "close",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "children": "×",
              },
              "ref": null,
              "rendered": "×",
              "type": "span",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "BAM!",
              "className": "logo-medium text-flav pt-3",
            },
            "ref": null,
            "rendered": "BAM!",
            "type": "h2",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            <button
              className="btn btn-logout"
              onClick={[Function]}
>
              Logout
</button>,
          ],
          "tag": "div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Logout",
              "className": "btn btn-logout",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Logout",
            "type": "button",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": true,
        "backdrop": true,
        "backdropTransition": Object {
          "mountOnEnter": true,
          "timeout": 150,
        },
        "centered": false,
        "children": Array [
          <ModalHeader
            closeAriaLabel="Close"
            tag="h5"
            toggle={[Function]}
            wrapTag="div"
>
            <button
                        className="close"
                        onClick={[Function]}
                        type="button"
            >
                        <span
                                    aria-hidden="true"
                        >
                                    ×
                        </span>
            </button>
            <h2
                        className="logo-medium text-flav pt-3"
            >
                        BAM!
            </h2>
</ModalHeader>,
          <ModalBody
            tag="div"
>
            <button
                        className="btn btn-logout"
                        onClick={[Function]}
            >
                        Logout
            </button>
</ModalBody>,
        ],
        "className": "menu-modal",
        "fade": false,
        "isOpen": false,
        "keyboard": true,
        "modalTransition": Object {
          "timeout": 300,
        },
        "onClosed": [Function],
        "onOpened": [Function],
        "role": "dialog",
        "toggle": [Function],
        "zIndex": 1050,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <button
                className="close"
                onClick={[Function]}
                type="button"
>
                <span
                                aria-hidden="true"
                >
                                ×
                </span>
</button>,
              <h2
                className="logo-medium text-flav pt-3"
>
                BAM!
</h2>,
            ],
            "closeAriaLabel": "Close",
            "tag": "h5",
            "toggle": [Function],
            "wrapTag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span
                  aria-hidden="true"
>
                  ×
</span>,
                "className": "close",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": "×",
                },
                "ref": null,
                "rendered": "×",
                "type": "span",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BAM!",
                "className": "logo-medium text-flav pt-3",
              },
              "ref": null,
              "rendered": "BAM!",
              "type": "h2",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              undefined,
              <button
                className="btn btn-logout"
                onClick={[Function]}
>
                Logout
</button>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Logout",
                "className": "btn btn-logout",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Logout",
              "type": "button",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<MenuModal /> can be toggled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuModal
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": true,
      "backdrop": true,
      "backdropTransition": Object {
        "mountOnEnter": true,
        "timeout": 150,
      },
      "centered": false,
      "children": Array [
        <ModalHeader
          closeAriaLabel="Close"
          tag="h5"
          toggle={[Function]}
          wrapTag="div"
>
          <button
                    className="close"
                    onClick={[Function]}
                    type="button"
          >
                    <span
                              aria-hidden="true"
                    >
                              ×
                    </span>
          </button>
          <h2
                    className="logo-medium text-flav pt-3"
          >
                    BAM!
          </h2>
</ModalHeader>,
        <ModalBody
          tag="div"
>
          <button
                    className="btn btn-logout"
                    onClick={[Function]}
          >
                    Logout
          </button>
</ModalBody>,
      ],
      "className": "menu-modal",
      "fade": false,
      "isOpen": false,
      "keyboard": true,
      "modalTransition": Object {
        "timeout": 300,
      },
      "onClosed": [Function],
      "onOpened": [Function],
      "role": "dialog",
      "toggle": [Function],
      "zIndex": 1050,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <button
              className="close"
              onClick={[Function]}
              type="button"
>
              <span
                            aria-hidden="true"
              >
                            ×
              </span>
</button>,
            <h2
              className="logo-medium text-flav pt-3"
>
              BAM!
</h2>,
          ],
          "closeAriaLabel": "Close",
          "tag": "h5",
          "toggle": [Function],
          "wrapTag": "div",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span
                aria-hidden="true"
>
                ×
</span>,
              "className": "close",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "children": "×",
              },
              "ref": null,
              "rendered": "×",
              "type": "span",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "BAM!",
              "className": "logo-medium text-flav pt-3",
            },
            "ref": null,
            "rendered": "BAM!",
            "type": "h2",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            <button
              className="btn btn-logout"
              onClick={[Function]}
>
              Logout
</button>,
          ],
          "tag": "div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Logout",
              "className": "btn btn-logout",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Logout",
            "type": "button",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": true,
        "backdrop": true,
        "backdropTransition": Object {
          "mountOnEnter": true,
          "timeout": 150,
        },
        "centered": false,
        "children": Array [
          <ModalHeader
            closeAriaLabel="Close"
            tag="h5"
            toggle={[Function]}
            wrapTag="div"
>
            <button
                        className="close"
                        onClick={[Function]}
                        type="button"
            >
                        <span
                                    aria-hidden="true"
                        >
                                    ×
                        </span>
            </button>
            <h2
                        className="logo-medium text-flav pt-3"
            >
                        BAM!
            </h2>
</ModalHeader>,
          <ModalBody
            tag="div"
>
            <button
                        className="btn btn-logout"
                        onClick={[Function]}
            >
                        Logout
            </button>
</ModalBody>,
        ],
        "className": "menu-modal",
        "fade": false,
        "isOpen": false,
        "keyboard": true,
        "modalTransition": Object {
          "timeout": 300,
        },
        "onClosed": [Function],
        "onOpened": [Function],
        "role": "dialog",
        "toggle": [Function],
        "zIndex": 1050,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <button
                className="close"
                onClick={[Function]}
                type="button"
>
                <span
                                aria-hidden="true"
                >
                                ×
                </span>
</button>,
              <h2
                className="logo-medium text-flav pt-3"
>
                BAM!
</h2>,
            ],
            "closeAriaLabel": "Close",
            "tag": "h5",
            "toggle": [Function],
            "wrapTag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span
                  aria-hidden="true"
>
                  ×
</span>,
                "className": "close",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": "×",
                },
                "ref": null,
                "rendered": "×",
                "type": "span",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BAM!",
                "className": "logo-medium text-flav pt-3",
              },
              "ref": null,
              "rendered": "BAM!",
              "type": "h2",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              undefined,
              <button
                className="btn btn-logout"
                onClick={[Function]}
>
                Logout
</button>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Logout",
                "className": "btn btn-logout",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Logout",
              "type": "button",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<MenuModal /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuModal
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": true,
      "backdrop": true,
      "backdropTransition": Object {
        "mountOnEnter": true,
        "timeout": 150,
      },
      "centered": false,
      "children": Array [
        <ModalHeader
          closeAriaLabel="Close"
          tag="h5"
          toggle={[Function]}
          wrapTag="div"
>
          <button
                    className="close"
                    onClick={[Function]}
                    type="button"
          >
                    <span
                              aria-hidden="true"
                    >
                              ×
                    </span>
          </button>
          <h2
                    className="logo-medium text-flav pt-3"
          >
                    BAM!
          </h2>
</ModalHeader>,
        <ModalBody
          tag="div"
>
          <button
                    className="btn btn-logout"
                    onClick={[Function]}
          >
                    Logout
          </button>
</ModalBody>,
      ],
      "className": "menu-modal",
      "fade": false,
      "isOpen": false,
      "keyboard": true,
      "modalTransition": Object {
        "timeout": 300,
      },
      "onClosed": [Function],
      "onOpened": [Function],
      "role": "dialog",
      "toggle": [Function],
      "zIndex": 1050,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <button
              className="close"
              onClick={[Function]}
              type="button"
>
              <span
                            aria-hidden="true"
              >
                            ×
              </span>
</button>,
            <h2
              className="logo-medium text-flav pt-3"
>
              BAM!
</h2>,
          ],
          "closeAriaLabel": "Close",
          "tag": "h5",
          "toggle": [Function],
          "wrapTag": "div",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span
                aria-hidden="true"
>
                ×
</span>,
              "className": "close",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "children": "×",
              },
              "ref": null,
              "rendered": "×",
              "type": "span",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "BAM!",
              "className": "logo-medium text-flav pt-3",
            },
            "ref": null,
            "rendered": "BAM!",
            "type": "h2",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            <button
              className="btn btn-logout"
              onClick={[Function]}
>
              Logout
</button>,
          ],
          "tag": "div",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Logout",
              "className": "btn btn-logout",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Logout",
            "type": "button",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": true,
        "backdrop": true,
        "backdropTransition": Object {
          "mountOnEnter": true,
          "timeout": 150,
        },
        "centered": false,
        "children": Array [
          <ModalHeader
            closeAriaLabel="Close"
            tag="h5"
            toggle={[Function]}
            wrapTag="div"
>
            <button
                        className="close"
                        onClick={[Function]}
                        type="button"
            >
                        <span
                                    aria-hidden="true"
                        >
                                    ×
                        </span>
            </button>
            <h2
                        className="logo-medium text-flav pt-3"
            >
                        BAM!
            </h2>
</ModalHeader>,
          <ModalBody
            tag="div"
>
            <button
                        className="btn btn-logout"
                        onClick={[Function]}
            >
                        Logout
            </button>
</ModalBody>,
        ],
        "className": "menu-modal",
        "fade": false,
        "isOpen": false,
        "keyboard": true,
        "modalTransition": Object {
          "timeout": 300,
        },
        "onClosed": [Function],
        "onOpened": [Function],
        "role": "dialog",
        "toggle": [Function],
        "zIndex": 1050,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <button
                className="close"
                onClick={[Function]}
                type="button"
>
                <span
                                aria-hidden="true"
                >
                                ×
                </span>
</button>,
              <h2
                className="logo-medium text-flav pt-3"
>
                BAM!
</h2>,
            ],
            "closeAriaLabel": "Close",
            "tag": "h5",
            "toggle": [Function],
            "wrapTag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span
                  aria-hidden="true"
>
                  ×
</span>,
                "className": "close",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": "×",
                },
                "ref": null,
                "rendered": "×",
                "type": "span",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BAM!",
                "className": "logo-medium text-flav pt-3",
              },
              "ref": null,
              "rendered": "BAM!",
              "type": "h2",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              undefined,
              <button
                className="btn btn-logout"
                onClick={[Function]}
>
                Logout
</button>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Logout",
                "className": "btn btn-logout",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Logout",
              "type": "button",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
